# frc-cpp-project-skeleton

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  deploy.sh  frc-toolchain.cmake  frc.cmake
src/: Robot.cpp  Robot.h
test/: CMakeLists.txt
test/src/: main.cpp
